--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/styles": "^5.12.0",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,14 +23,19 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.9.6",
     "debounce": "^1.2.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "material-table": "^1.69.3",
     "pdf-lib": "^1.12.0",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.2.4",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.1.0",
